[tool.poetry]
authors = ["Joel Collins <pypi@jtcollins.net>"]
description = "A simple command line utility to build an architecture.md file"
name = "archmd"
version = "0.3.0"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.269"
black = "^23.3.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
archmd = 'archmd:app'
